<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inhomefragments.InfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen8"
            android:orientation="vertical"
            android:background="@color/White">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ImportantH"
                android:textAlignment="center"
                android:layout_marginRight="@dimen/dimen50"
                android:layout_marginLeft="@dimen/dimen50"
                android:layout_marginTop="@dimen/dimen20"
                android:layout_marginBottom="@dimen/dimen16"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_1_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_1_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_2_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_2_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_3_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_3_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_4_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_4_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_5_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_5_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_6_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_6_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_7_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_7_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_8_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_8_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_9_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_9_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_10_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_10_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Important_11_H"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Important_11_Info"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
        </LinearLayout>
    </ScrollView>


</FrameLayout>