<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inhomefragments.HelpFragment"
    android:background="@color/White">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen8"
            android:orientation="vertical"
            android:padding="@dimen/dimen8"
            android:background="@color/White">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/weHeadin"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />

            <TextView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen8"
                android:text="@string/weInfo"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="20sp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/hadfnaHeadin"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/hadfnaInfo"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/howDoHeadin"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/howDofnaInfo"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_marginRight="@dimen/dimen8"
                />
        </LinearLayout>
    </ScrollView>


</FrameLayout>